# semantic-service

./: .dockerignore  .gitignore  AGENTS.md  docker-compose.yaml  justfile  openapi.yaml  test.txt
backend/: .dockerignore  .golangci.yaml  Dockerfile  codegen.yaml  go.mod  go.sum  migrate.Dockerfile  migrate.sh
backend-rs/: Cargo.toml
backend/cmd/app/: main.go
backend/configs/: local.toml  local.yaml  prod.toml  prod.yaml
backend/db/migrations/: 00001_extensions.sql  00002_init.sql  00003_vectorizers.sql  20251009092614_init.sql  20251106024629_vectorizers.sql
backend/db/sqlc/: sqlc.yaml
backend/db/sqlc/queries/: auth.sql  chunk.sql  document.sql  users.sql
backend/internal/config/: config.go
backend/internal/domain/: auth.go  chunk.go  document.go  user.go
backend/internal/embedding_client/: client.go
backend/internal/handler/: api.gen.go  auth.go  document.go  handler.go  middleware.go  ping.go  user.go
backend/internal/repository/: auth.go  chunk.go  document.go  repository.go  user.go
backend/internal/repository/queries/: auth.sql.go  chunk.sql.go  document.sql.go  models.go  users.sql.go
backend/internal/server/: server.go
backend/internal/service/: auth.go  document.go  service.go  user.go
backend/pkg/logger/: logger.go
configs/: g-local.toml  g-prod.toml
embedding-service/: .dockerignore  Dockerfile  pyproject.toml
embedding-service/src/: main.py  models.py  service.py
pgai-setup/: .dockerignore  Dockerfile  pyproject.toml
pgai-setup/src/: cfg.py  main.py
