[package]
name = "backend-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
axum = "0.8.6"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring-webpki",
    "postgres",
] }
config = { version = "0.15.18", features = ["yaml"] }
jsonwebtoken = "10.1.0"
serde = "1.0.228"
serde_json = "1.0.145"
