[project]
name = "embedding-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "batched>=0.1.5",
    "tokenizers<0.21.4",
    "sentence-transformers>=5.1.0",
    "einops>=0.8.1",
    "torch>=2.8.0",
    "numpy",
    "optimum>=1.27.0",
]
